Fix gap below editor textarea

--- a/src/style.css
+++ b/src/style.css
@@ -233,7 +233,9 @@ label {
 }
 
 
-
+.hwt-container {
+    display: flex !important;
+}
 
 @media only screen and (max-width: 600px) {
 
